--- a/templates/index.html
+++ b/templates/index.html
@@ -42,12 +42,6 @@
                     <li class="nav-item">
                         <a href="chat" class="nav-link">Chat</a>
                     </li>
-                    <li class="nav-item">
-                        <a href="bar-chart" class="nav-link">Bar Chart</a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="pie-chart" class="nav-link">Pie Chart</a>
-                    </li>
                 </ul>
             </div>
         </nav>
@@ -80,6 +74,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script type="text/javascript" src="static/js/reconnecting-websocket.min.js"></script>
-    <script type="text/javascript" src="static/js/application.js"></script>
+    <script type="text/javascript" src="static/js/app.js"></script>
   </body>
 </html>
